# redes_hack

./: .gitignore  README.md  pytest.ini
.github/workflows/: classroom.yml
ftp_server_cpp/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  FTPServer.cpp  FTPServer.h  Makefile  cmake_install.cmake  common.h  ftp_server.cpp
ftp_server_testing/: requirements.txt  test_ftp-server.py
